[DNM] Jobs for testing tempest bump in T,U and V
Centos 8/7 based jobs to test tempest bump in train,
ussuri and victoria

Change-Id: Icd87fe357bec76d21b858d51b89c7e929496e06d

--- a/zuul.d/standalone-jobs.yaml
+++ b/zuul.d/standalone-jobs.yaml
@@ -808,6 +808,8 @@
           - 'environments/services/octavia.yaml'
           - 'ci/environments/scenario010-standalone.yaml'
         use_os_tempest: false
+        tempest_test_whitelist:
+          - '^octavia_tempest_plugin.*smoke'
 
 # RDO jobs for check pipeline - for scenario standalones yaml anchors let us
 # avoid duplication https://tree.taiga.io/project/tripleo-ci-board/us/1228
