--- a/zuul.d/nodesets.yaml
+++ b/zuul.d/nodesets.yaml
@@ -343,10 +343,40 @@
     name: tripleo-ovb-centos-8-primary-vexxhost
     nodes:
       - name: primary
-        label: upstream-centos-8-stream
+        label: upstream-centos-8-vexxhost-public
     groups:
       - name: switch
         nodes: []
+      - name: peers
+        nodes: []
+
+- nodeset:
+    name: two-centos-8-nodes-vexxhost
+    nodes:
+      - name: primary
+        label: upstream-centos-8-vexxhost
+      - name: secondary
+        label: upstream-centos-8-vexxhost
+    groups:
+      - name: switch
+        nodes:
+          - primary
+      - name: peers
+        nodes:
+          - secondary
+      - name: subnodes
+        nodes:
+          - secondary
+
+- nodeset:
+    name: single-centos-8-stream-node
+    nodes:
+      - name: primary
+        label: upstream-centos-8-stream
+    groups:
+      - name: switch
+        nodes:
+          - primary
       - name: peers
         nodes: []
 
