--- a/zuul.d/standalone-jobs.yaml
+++ b/zuul.d/standalone-jobs.yaml
@@ -343,6 +343,8 @@
         standalone_environment_files:
           - 'environments/low-memory-usage.yaml'
           - 'ci/environments/scenario010-standalone.yaml'
+        tempest_test_whitelist:
+          - '^octavia_tempest_plugin.*smoke'
 
 - job:
     name: periodic-tripleo-ci-centos-8-scenario010-kvm-standalone-master
