DNM: Enable Octavia smoke tests in periodic job
For testing RDO

Change-Id: I3c7b0eb1a2c4aab67c38b8fe2c3039c60b66fa69

--- a/zuul.d/standalone-jobs.yaml
+++ b/zuul.d/standalone-jobs.yaml
@@ -35,6 +35,7 @@
         tempest_test_whitelist:
           - 'api'
           - 'scenario'
+          - '^octavia_tempest_plugin.*smoke'
         use_os_tempest: true
 
 - job:
