Remove validation from 050 upgrades job as in upstream
Change-Id: I4871dfa7df810e23f8d62b8c0f34339d49935098

--- a/zuul.d/undercloud-jobs.yaml
+++ b/zuul.d/undercloud-jobs.yaml
@@ -109,5 +109,7 @@
     vars:
       featureset: '050'
       release: master
+      featureset_override:
+        validate_services: false
       extra_tags:
         - undercloud-upgrade
