--- a/zuul.d/integration-pipeline-main.yaml
+++ b/zuul.d/integration-pipeline-main.yaml
@@ -76,6 +76,9 @@
         - periodic-tripleo-ci-centos-8-standalone-upgrade-master:
             dependencies:
               - periodic-tripleo-ci-build-containers-ubi-8-push
+        - periodic-tripleo-ci-centos-8-undercloud-upgrade-master:
+            dependencies:
+              - periodic-tripleo-ci-build-containers-ubi-8-push
         - periodic-tripleo-ci-centos-8-scenario000-multinode-oooq-container-updates-master:
             dependencies:
               - periodic-tripleo-ci-build-containers-ubi-8-push
