--- a/zuul.d/standalone-jobs.yaml
+++ b/zuul.d/standalone-jobs.yaml
@@ -427,6 +427,19 @@
           - 'environments/podman.yaml'
 
 - job:
+    name: periodic-tripleo-ci-centos-8-undercloud-upgrade-master
+    parent: tripleo-ci-base-standalone-upgrade-periodic-centos-8
+    voting: false
+    vars:
+      featureset: '050'
+      release: master
+      featureset_override:
+        standalone_environment_files:
+          - 'environments/low-memory-usage.yaml'
+          - 'environments/docker-ha.yaml'
+          - 'environments/podman.yaml'
+
+- job:
     name: periodic-tripleo-ci-centos-8-standalone-on-multinode-ipa-master
     parent: tripleo-ci-base-standalone-periodic-centos-8
     nodeset: two-centos-8-nodes-vexxhost
