--- a/playbooks/run-rdoinfo-cbs-centos8.yaml
+++ b/playbooks/run-rdoinfo-cbs-centos8.yaml
@@ -232,6 +232,20 @@
           docker_image_tag: "{{ 'current-tripleo' if not build_container_images|default(false)|bool else omit }}"
       when: not stop_file.stat.exists
 
+    - name: Dump package list in job from repo being tested
+      changed_when: true
+      when:
+        - buildset_artifacts_url is defined
+        - not stop_file.stat.exists
+      shell:
+        cmd: |
+          # Collect the list of updated packages in a log file
+          UPDATED_PKGS=$(curl "{{ buildset_artifacts_url }}/repos/{{ buildsys_tag }}.content.txt" |rev|awk -F'/' '{printf $1","}'|rev)
+          if [ ! -d /var/log/extra/ ]; then
+              sudo mkdir /var/log/extra/
+          fi
+          echo "{{ buildsys_tag }}${UPDATED_PKGS}" |sudo tee -a /var/log/extra/tested_pkgs_updates.txt
+
     - name: Run quickstart
       include_role:
         name: run-test
