Removing c8 stream specific nodesets from integration lines
Removing all c8 stream specific nodesets usage from dependencies jobs and integration lines
as we have moved c8 release nodes to stream by changing the label in https://review.rdoproject.org/r/
The stream specific nodeset definitions will now be removed in patch https://review.rdoproject.org/r/c/rdo-jobs/+/32413

Change-Id: I6b0491922ab20a44c30c81d63ec5b720c33b33a6

--- a/zuul.d/dependencies-jobs.yaml
+++ b/zuul.d/dependencies-jobs.yaml
@@ -27,7 +27,7 @@
     name: periodic-tripleo-ci-centos-8-standalone-centos8stream-master
     parent: periodic-tripleo-ci-centos-8-standalone-multiple-dependency-master
     ansible-version: 2.9
-    nodeset: single-centos-8-stream-node
+    nodeset: single-centos-8-node
     vars:
       dependency: centos8stream
 
@@ -35,7 +35,7 @@
     name: periodic-tripleo-ci-centos-8-standalone-centos8stream-container-build-master
     parent: periodic-tripleo-ci-centos-8-standalone-multiple-dependency-master
     ansible-version: 2.9
-    nodeset: single-centos-8-stream-node
+    nodeset: single-centos-8-node
     vars:
       dependency: centos8stream
       build_container_images: true
@@ -45,7 +45,7 @@
     name: periodic-tripleo-ci-centos-8-standalone-container-tools-master
     parent: periodic-tripleo-ci-centos-8-standalone-module-dependency-master
     ansible-version: 2.9
-    nodeset: single-centos-8-stream-node
+    nodeset: single-centos-8-node
     vars:
       dependency: container-tools
 
@@ -53,7 +53,7 @@
     name: periodic-tripleo-ci-centos-8-standalone-container-tools-container-build-master
     parent: periodic-tripleo-ci-centos-8-standalone-module-dependency-master
     ansible-version: 2.9
-    nodeset: single-centos-8-stream-node
+    nodeset: single-centos-8-node
     vars:
       dependency: container-tools
       build_container_images: true
