DNM: Add branch-level conatiner-tools dep jobs
Testing jobs in layout.yaml - remove before
merging.

Change-Id: I6544ad5ab0f3f586503d91cc19dc0b706c0d9a00
Depends-On: https://review.opendev.org/c/openstack/tripleo-quickstart/+/780941

--- a/zuul.d/layout.yaml
+++ b/zuul.d/layout.yaml
@@ -8,5 +8,9 @@
               - ^requirements.txt
               - ^test-requirements.txt
               - ^tox.ini$
+        - periodic-tripleo-ci-centos-8-standalone-container-tools-container-build-master
+        - periodic-tripleo-ci-centos-8-standalone-container-tools-container-build-victoria
+        - periodic-tripleo-ci-centos-8-standalone-container-tools-container-build-ussuri
+        - periodic-tripleo-ci-centos-8-standalone-container-tools-container-build-train
     gate:
       jobs: *jobs
