--- a/zuul.d/dependencies-jobs.yaml
+++ b/zuul.d/dependencies-jobs.yaml
@@ -45,7 +45,7 @@
     name: periodic-tripleo-ci-centos-8-standalone-container-tools-master
     parent: periodic-tripleo-ci-centos-8-standalone-module-dependency-master
     ansible-version: 2.9
-    nodeset: single-centos-8-stream-node
+    nodeset: single-centos-8-node
     vars:
       dependency: container-tools
 
@@ -53,7 +53,7 @@
     name: periodic-tripleo-ci-centos-8-standalone-container-tools-container-build-master
     parent: periodic-tripleo-ci-centos-8-standalone-module-dependency-master
     ansible-version: 2.9
-    nodeset: single-centos-8-stream-node
+    nodeset: single-centos-8-node
     vars:
       dependency: container-tools
       build_container_images: true
@@ -96,6 +96,14 @@
       release: victoria
       branch_override: "stable/victoria"
 
+- job:
+    name: periodic-tripleo-ci-centos-8-standalone-container-tools-container-build-victoria
+    parent: periodic-tripleo-ci-centos-8-standalone-container-tools-container-build-master
+    override-checkout: "stable/victoria"
+    vars:
+      release: victoria
+      branch_override: "stable/victoria"
+
 # ussuri jobs
 - job:
     name: periodic-tripleo-ci-centos-8-standalone-centos8stream-ussuri
@@ -113,6 +121,14 @@
       release: ussuri
       branch_override: "stable/ussuri"
 
+- job:
+    name: periodic-tripleo-ci-centos-8-standalone-container-tools-container-build-ussuri
+    parent: periodic-tripleo-ci-centos-8-standalone-container-tools-container-build-master
+    override-checkout: "stable/ussuri"
+    vars:
+      release: victoria
+      branch_override: "stable/ussuri"
+
 # train c8 jobs
 - job:
     name: periodic-tripleo-ci-centos-8-standalone-centos8stream-train
@@ -128,4 +144,12 @@
     override-checkout: "stable/train"
     vars:
       release: train
+      branch_override: "stable/train"
+
+- job:
+    name: periodic-tripleo-ci-centos-8-standalone-container-tools-container-build-train
+    parent: periodic-tripleo-ci-centos-8-standalone-container-tools-container-build-master
+    override-checkout: "stable/train"
+    vars:
+      release: victoria
       branch_override: "stable/train"
