wip: revamp ceph-jobs
Change-Id: I06b78e3728789e29ea2aaac1e4d32239389bcbe3
Signed-off-by: Chandan Kumar (raukadah) <chkumar@redhat.com>

--- a/zuul.d/ceph-ansible.yaml
+++ b/zuul.d/ceph-ansible.yaml
@@ -1,4 +1,11 @@
 ---
+# Ceph version Mapping
+# Train: stable-4
+# Ussuri: stable-4
+# Victoria: stable-4
+# Wallaby: stable-5
+# master: master
+
 - job:
     # This is an abstract job to share common bits for each ooo-ceph integration jobs
     name: tripleo-ceph-integration
