Enable sc10 kvm jobs in integration pipeline
As these jobs are already running in component pipeline.

Change-Id: Id03d7b75a4e6f8058dc1975d5751826b34bc3497
Signed-off-by: Chandan Kumar (raukadah) <chkumar@redhat.com>

--- a/zuul.d/integration-pipeline-main.yaml
+++ b/zuul.d/integration-pipeline-main.yaml
@@ -61,6 +61,9 @@
         - periodic-tripleo-ci-centos-8-scenario010-standalone-master:
             dependencies:
               - periodic-tripleo-ci-build-containers-ubi-8-push
+        - periodic-tripleo-ci-centos-8-scenario010-kvm-standalone-master:
+            dependencies:
+              - periodic-tripleo-ci-build-containers-ubi-8-push
         - periodic-tripleo-ci-centos-8-scenario012-standalone-master:
             dependencies:
               - periodic-tripleo-ci-build-containers-ubi-8-push
