--- a/zuul.d/integration-pipeline-victoria.yaml
+++ b/zuul.d/integration-pipeline-victoria.yaml
@@ -40,6 +40,9 @@
         - periodic-tripleo-ci-centos-8-scenario010-standalone-victoria:
             dependencies:
               - periodic-tripleo-ci-build-containers-ubi-8-push-victoria
+        - periodic-tripleo-ci-centos-8-scenario010-kvm-standalone-victoria:
+            dependencies:
+              - periodic-tripleo-ci-build-containers-ubi-8-push-victoria
         - periodic-tripleo-ci-centos-8-scenario012-standalone-victoria:
             dependencies:
               - periodic-tripleo-ci-build-containers-ubi-8-push-victoria
