Run sc10 kvm jobs with concurrency 1
As Amphora vms needs more space, if runned with multiple
concurrency, there is no much space left on the host leading
to no valid host.

Decreasing tempest concurrency might fix it.

Change-Id: I05695c0da0c8639778dac95179c12e9a05cc423d
Signed-off-by: Chandan Kumar (raukadah) <chkumar@redhat.com>

--- a/zuul.d/standalone-jobs.yaml
+++ b/zuul.d/standalone-jobs.yaml
@@ -358,6 +358,7 @@
       standalone_ceph: true
       featureset_override:
         validate_services: false
+        tempest_run_concurrency: 1
         standalone_environment_files:
           - 'environments/low-memory-usage.yaml'
           - 'ci/environments/scenario010-standalone.yaml'
