--- a/zuul.d/layout.yaml
+++ b/zuul.d/layout.yaml
@@ -1,12 +1,15 @@
+- job:
+    name: tripleo-ci-centos-8-ovb-1ctlr_1comp-featureset001-private-shared
+    parent: tripleo-ci-centos-8-ovb-1ctlr_1comp-featureset001
+    vars:
+      create_private_network: false
+
+- job:
+    name: tripleo-ci-centos-8-ovb-1ctlr_1comp-featureset001-isolated
+    parent: tripleo-ci-centos-8-ovb-1ctlr_1comp-featureset001
+
 - project:
     check:
       jobs: &jobs
-        - rdo-tox-molecule-delegated-centos-8: &molecule
-            files:
-              - .*molecule.*
-              - ^roles
-              - ^requirements.txt
-              - ^test-requirements.txt
-              - ^tox.ini$
-    gate:
-      jobs: *jobs
+        - tripleo-ci-centos-8-ovb-1ctlr_1comp-featureset001-isolated
+        - tripleo-ci-centos-8-ovb-1ctlr_1comp-featureset001-private-shared
