--- a/zuul.d/standalone-jobs.yaml
+++ b/zuul.d/standalone-jobs.yaml
@@ -350,6 +350,7 @@
     vars:
       tags:
         - build
+        - nested_virt
         - standalone
         - octavia
       # using featureset062 is tech debt and should be addressed at a future sprint
